added reference Burr

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -126,6 +126,20 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {2000}
 }
 
+@article{Burr2021,
+   author = {Burr, D. A. and Pizzie, R. G. and Kraemer, D. J. M.},
+   title = {Anxiety, not regulation tendency, predicts how individuals regulate in the laboratory: An exploratory comparison of self-report and psychophysiology},
+   journal = {Plos One},
+   volume = {16},
+   number = {3},
+   ISSN = {1932-6203},
+   DOI = {ARTN e0247246
+10.1371/journal.pone.0247246},
+   url = {<Go to ISI>://WOS:000629591800042
+https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0247246&type=printable},
+   year = {2021}
+}
+
 @article{Cacioppo1982,
    author = {Cacioppo, J. T. and Petty, R. E.},
    title = {The Need for Cognition},
