added reference Schönfelder

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -635,6 +635,21 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
    year = {2021},
 }
 
+@article{Schoenfelder2014,
+   author = {Schönfelder, S. and Kanske, P. and Heissler, J. and Wessa, M.},
+   title = {Time course of emotion-related responding during distraction and reappraisal},
+   journal = {Social Cognitive and Affective Neuroscience},
+   volume = {9},
+   number = {9},
+   pages = {1310-9},
+   ISSN = {1749-5024 (Electronic)
+1749-5016 (Linking)},
+   DOI = {10.1093/scan/nst116},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/23988760
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4158366/pdf/nst116.pdf},
+   year = {2014}
+}
+
 @Misc{Schwarzer1999,
    author = {Schwarzer, R. and Diehl, M. and Schmitz, G. S.},
    title = {Self-Regulation Scale},
