--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -37,7 +37,7 @@ Importantly, results on electromyographic measures  seem to be more consistent c
 Similarly to the differences in short term effectiveness, these tactics from three different strategies are also related to different medium and long-term consequences. 
 In particular, strategies that do not change the emotional content of the situation, for instance by taking a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
 Thus, the self-reported habitual use of suppression is associated with more negative affect and lower general well-being [@GrossJohn2003]. 
-In addition, a number of ER strategies <!-- Anne: welche? siehe auch nöchster Kommentar, an irgendeiner Stelle würde ich ein zwei Beispiele nennen.--> have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]), which led to the postulation of *adaptive* (such as reappraisal, acceptance) and *maladaptive* (such as suppression, rumination) ER strategies.
+In addition, a number of ER strategies, e.g., rumination and suppression, have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]), which led to the postulation of *adaptive* (such as reappraisal, acceptance) and *maladaptive* (such as suppression, rumination) ER strategies.
 For example, it was shown that maladaptive ER strategies <!-- Anne: hier würde ich die konkrete Strategie(n) in Klammer nennen--> mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
 
 The postulation of *adaptive* and *maladaptive* ER strategies has been challenged by the concepts of ER repertoire and ER flexibility.
