--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -31,6 +31,7 @@ author:
       - Investigation
       - Project administration
       - Software
+      - Visualization
       - Writing - review & editing
   - name          : "Anne Gärtner"
     orcid         : "0000-0003-4296-963X"
