--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -37,7 +37,6 @@ author:
     affiliation   : "1"
     role:
       - Formal analysis
-      - Writing - original draft preparation
       - Writing - review & editing
       - Visualization
   - name          : "Alexander Strobel"
@@ -199,7 +198,7 @@ We used *R* with *R Studio* [@RCT2020; @RStudioTeam2020] with the main packages 
 
 ## Ethics information
 
-The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...).
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number SR-EK-50012022).
 Prior to testing, written informed consent will be obtained.
 Participants will receive 30€ in total or course credit for participation.
 
@@ -329,6 +328,7 @@ The funders have/had no role in study design, data collection and analysis, deci
 JZ, CS, and AS conceptualized the study and acquired funding.
 JZ and CS developed the methodology, investigated, administered the project, and wrote the software.
 JZ and CK did the formal analysis, visualized the results, and prepared the original draft.
+JZ prepared the original draft.
 All authors reviewed, edited, and approved the final version of the manuscript.
 
 
