added data exclusion

--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -246,7 +246,7 @@ To account for technical errors, noisy physiological data, or participants who i
 ## Analysis plan
 
 Data collection and analysis will not be performed blind to the conditions of the experiments.
-We will exclude the data of a participant from all analyses, if the participant states that they did not follow the instructions or if the investigator notes that the participant misunderstood the instructions.
+We will exclude the data of a participant from all analyses, if the participant states that they did not follow the instructions, if the investigator notes that the participant misunderstood the instructions, or if the participant withdraws their consent.
 No data will be replaced.
 We aim to conduct all analysis as described in Westbrook et al. [-@Westbrook2013], but the level of detail was not always sufficient, so there might be deviations regarding data cleaning and degrees of freedom.
 The performance measure *d'* will be computed as the difference of the *z*-transformed hit rate and the *z*-transformed false alarm rate [@Macmillan1990].
