--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -33,13 +33,12 @@ stim_neutral <- readxl::read_xlsx(file.path(here("01_Paradigms", "ER-ED", "ER_ED
 We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study [@Simmons2012].
 The paradigm was written and presented using *PsychoPy* [@Peirce2019].
 We used *R* with *R Studio* [@RCore2021; @RStudioTeam2020] with the main packages *afex* [@Singmann2021] and *BayesFactor*[@Morey2021] for all analyses.
-The R Markdown file used to analyze the data and write this document, as well as the raw data and the materials are freely available at https://github.com/ChScheffel/CERED.<!-- eventually perhaps refer to the _script and R Markdown file_ -->
+The R Markdown file used to analyze the data and write this document, as well as the raw data and the materials are freely available at https://github.com/ChScheffel/CERED.
 A complete list of all measures assessed in the study can be found at OSF (<https://osf.io/vnj8x/>) and GitHub (https://github.com/ChScheffel/CERED).
-<!-- Attention! OSF is still private --> 
 
 ## 2.1 Ethics information
 
-The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...). <!-- Attention!add EK number, when approved --> 
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK50012022). 
 Prior to testing, written informed consent will be obtained.
 Participants will receive 30 € in total or course credit for participation.
 
@@ -158,6 +157,9 @@ Detailed information on power calculation for each hypothesis can be found in th
 ## 2.5 Analysis plan
 
 Data collection and analysis will not be performed blind to the conditions of the experiments.
+Data of whole participants will be excluded from analysis if participants withdraw their consent or they state that they did not follow experimental instructions.
+EMG data of subjects will be excluded from analysis if errors occured during recording.
+No further data exclusions are planned.
 The level of significance will be set to $\alpha=.05$.
 
 *Effect of valence on arousal and facial EMG.*<br> 
