--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -357,7 +357,7 @@ A complete list of all measures assessed in the study can be found at OSF (\url{
 \hypertarget{ethics-information}{%
 \subsection{2.1 Ethics information}\label{ethics-information}}
 
-The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK\ldots).
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK50012022).
 Prior to testing, written informed consent will be obtained.
 Participants will receive 30 € in total or course credit for participation.
 
@@ -485,6 +485,9 @@ Detailed information on power calculation for each hypothesis can be found in th
 \subsection{2.5 Analysis plan}\label{analysis-plan}}
 
 Data collection and analysis will not be performed blind to the conditions of the experiments.
+Data of whole participants will be excluded from analysis if participants withdraw their consent or they state that they did not follow experimental instructions.
+EMG data of subjects will be excluded from analysis if errors occured during recording.
+No further data exclusions are planned.
 The level of significance will be set to \(\alpha=.05\).
 
 \emph{Effect of valence on arousal and facial EMG.}
