--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -112,7 +112,7 @@
   {}{\typeout{Failed to patch title.}}
 \makeatother
 \shorttitle{Subjective values of emotion regulation strategies}
-\keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: 5583}
+\keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: 5627}
 \usepackage{lineno}
 
 \linenumbers
@@ -228,7 +228,7 @@ Importantly, results on electromyographic measures seem to be more consistent co
 Similarly to the differences in short term effectiveness, these tactics from three different strategies are also related to different medium and long-term consequences.
 In particular, strategies that do not change the emotional content of the situation, for instance by taking a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
 Thus, the self-reported habitual use of suppression is associated with more negative affect and lower general well-being.\textsuperscript{9}
-In addition, a number of ER strategies, e.g., rumination and suppression, have been associated with mental disorders (for meta-analytic review, see Aldao et al.),\textsuperscript{10} which led to the postulation of \emph{adaptive} (such as reappraisal, acceptance) and \emph{maladaptive} (such as suppression, rumination) ER strategies.
+In addition, a number of ER strategies, e.g., rumination and suppression, have been associated with mental disorders (for meta-analytic review, see Aldao et al.\textsuperscript{10}), which led to the postulation of \emph{adaptive} (such as reappraisal, acceptance) and \emph{maladaptive} (such as suppression, rumination) ER strategies.
 For example, it was shown that maladaptive ER strategies (rumination and suppression) mediate the effect between neuroticism and depressive symptoms.\textsuperscript{11}
 
 The postulation of \emph{adaptive} and \emph{maladaptive} ER strategies has been challenged by the concepts of ER repertoire and ER flexibility.
